2012-10-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFSocket.c: Implement CopyAddress functions.

2012-10-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFSocket.h: Use winsock on Windows.
	* Source/CFSocket.c: Implement Create and Address functions.

2012-09-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFSocket.h: Use winsock on Windows.
	* Source/CFSocket.c: Implement Create and Address functions.

2012-09-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.m: Call the CoreBase initialization code before
	trying to initialize the bridged classes.

2012-09-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFSocket.h:
	* Source/GNUmakefile.in:
	* Source/CFSocket.c: Add CFSocket skeleton.

2012-09-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRunLoop.c: Implement add, remove and search functions.

2012-08-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRunLoop.h: Add missing bits.
	* Source/CFString.c: Initialize CFRunLooop contant strings.
	* Source/CFRunLoop.c: Implement create functions.

2012-08-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h:
	* Source/CFRuntime.c: Add a private deallocation function.
	* Source/NSCFArray.m:
	* Source/NSCFData.m:
	* Source/NSCFError.m:
	* Source/NSCFString.m:
	* Source/NSCFType.m: Implement -dealloc.

2012-08-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Header/CoreFoundation/CFRunLoop.h:
	* Source/GNUmakefile.in:
	* Source/CFRunLoop.c:
	* Source/CFRuntime.c: Add CFRunLoop skeleton.

2012-08-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStream.m: Delete.
	* Source/CFStream.c: Add CFStream skeleton.
	* Source/GNUmakefile: Include CFStream.c to build.

2012-08-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFDate.c: Added copy, equal and hash functions.
	* Source/CFNumber.c: Added copy function.